# amcax-daemon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  README.zh_cn.md  commit_log
Resources/: Resource.qrc  Version.rc  Version.rc.in  resource.h  resource.rc
Src/: Main.cpp
Src/Command/: Command.h
Src/Core/: ACAMCore.cpp  ACAMCore.h  ACAMCoreCreate.cpp  ACAMCoreFile.cpp  CoreDefine.h  DataManager.cpp  DataManager.h  LocalDataManager.cpp  LocalDataManager.h  SelectInfo.h  UndoManage.cpp  UndoManage.h  UndoRedoHandler.cpp  UndoRedoHandler.h
Src/Object/: AdapterObject.cpp  AdapterObject.h  AdapterObjectParent.cpp  AdapterObjectParent.h  AxisObject.cpp  AxisObject.h  BRepObject.cpp  BRepObject.h  BaseObject.cpp  BaseObject.h  MeshObject.cpp  MeshObject.h  ObjectDefine.h  ObjectType.h  PlaneObject.cpp  PlaneObject.h  TSplineObject.cpp  TSplineObject.h
Src/ObjectDraw/: AxisObjectDraw.cpp  AxisObjectDraw.h  BrepObjectDraw.cpp  BrepObjectDraw.h  MeshObjectDraw.cpp  MeshObjectDraw.h  ObjectDraw.cpp  ObjectDraw.h  TSplineObjectDraw.cpp  TSplineObjectDraw.h
Src/Operation/: CreateOperate.cpp  CreateOperate.h  CreateOperate_Builder.cpp  CreateOperate_Builder.h  CreateOperate_Circular.cpp  CreateOperate_Circular.h  CreateOperate_CircularTSpline.cpp  CreateOperate_CircularTSpline.h  CreateOperate_Cone.cpp  CreateOperate_Cone.h  CreateOperate_ConeTSpline.cpp  CreateOperate_ConeTSpline.h  CreateOperate_Cube.cpp  CreateOperate_Cube.h  CreateOperate_CubeMesh.cpp  CreateOperate_CubeMesh.h  CreateOperate_CubeTSpline.cpp  CreateOperate_CubeTSpline.h  CreateOperate_Cylinder.cpp  CreateOperate_Cylinder.h  CreateOperate_CylinderTSpline.cpp  CreateOperate_CylinderTSpline.h  CreateOperate_Plane.cpp  CreateOperate_Plane.h  CreateOperate_PlaneMesh.cpp  CreateOperate_PlaneMesh.h  CreateOperate_PlaneTSpline.cpp  CreateOperate_PlaneTSpline.h  CreateOperate_Polygon.cpp  CreateOperate_Polygon.h  CreateOperate_Prism.cpp  CreateOperate_Prism.h  CreateOperate_QuadballTSpline.cpp  CreateOperate_QuadballTSpline.h  CreateOperate_Ring.cpp  CreateOperate_Ring.h  CreateOperate_RoundedPolygon.cpp  CreateOperate_RoundedPolygon.h  CreateOperate_RoundedPrism.cpp  CreateOperate_RoundedPrism.h  (+89 more)
Src/Record/: Record.cpp  Record.h
Src/Utils/: MathUtils.cpp  MathUtils.h  Quaternion.cpp  Quaternion.h
Src/Windows/: ACAMWindow.cpp  ACAMWindow.h  ACAMWindow.ui  AxisOperate.cpp  AxisOperate.h  AxisOperateDraw.cpp  AxisOperateDraw.h  DialogAuto.cpp  DialogAuto.h  IntValidator.cpp  IntValidator.h  OperateToolbar.cpp  OperateToolbar.h  OperateViewer.cpp  OperateViewer.h  ParamDialog.cpp  ParamDialog.h  QLineEditUnit.cpp  QLineEditUnit.h  RenderViewer.cpp  RenderViewer.h  RenderViewerDraw.cpp  RenderViewerOps.cpp  RenderViewerOpsBRep.cpp  RenderViewerOpsBase.cpp  RibbonViewer.cpp  RibbonViewer.h  SelectTool.cpp  SelectTool.h
Src/Windows/QGLViewer/: camera.cpp  camera.h  frame.cpp  frame.h  manipulatedCameraFrame.cpp  manipulatedCameraFrame.h  manipulatedFrame.cpp  manipulatedFrame.h  qglviewer.cpp  qglviewer.h
